force-app/main/default/objects/Approved_Email__c/Approved_Email__c.object-meta.xml
<CustomObject><label>Approved Email</label><pluralLabel>Approved Emails</pluralLabel><nameField><label>Approved Email Name</label><type>Text</type></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>ReadWrite</sharingModel><enableActivities>false</enableActivities></CustomObject>