force-app/main/default/objects/Approved_Email__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><label>Email</label><type>Email</type><required>true</required></CustomField>