force-app/main/default/objects/Approved_Email__c/fields/Email_Normalized__c.field-meta.xml
<CustomField><fullName>Email_Normalized__c</fullName><label>Email Normalized</label><type>Text</type><length>255</length><unique>true</unique><caseSensitive>false</caseSensitive><required>true</required><externalId>true</externalId></CustomField>