force-app/main/default/objects/Approved_Email__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>Notes</label><type>LongTextArea</type><visibleLines>3</visibleLines><length>32768</length></CustomField>