force-app/main/default/objects/Approved_Email__c/listViews/All.listView-meta.xml
<ListView><fullName>All</fullName><label>All Approved Emails</label><filterScope>Everything</filterScope></ListView>